--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dbb_frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://127.0.0.1:5000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
