--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:dbbapp123@localhost:5400/postgres
+DATABASE_URL=postgresql://<DB username>:<DB password>@localhost:<DB Port>/<DB name>
 JWT_SECRET_KEY=no1i2j9U*jM0Unkncoj0jj2e1)(341#@%14123123123123da
